--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Overpass:wght@200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="header-title">
+        <h1>Post Malone</h1>
+        <h2>Better Now</h2>
+    </header>
+    
+
     
 </body>
 </html>
