--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="header-title">
-        <h1>Post Malone</h1>
+        <h1>Post Malone Trap</h1>
         <h2>"Better Now"</h2>
     </header>
     <section class="lyrics">
