--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header-title">
         <h1>Post Malone Trap</h1>
-        <h2>"Better Now"</h2>
+        <h2>"Better Now Testowanie Grida"</h2>
     </header>
     <section class="lyrics">
         <div class="container">
