--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 I only say that 'cause you're not around, not around
                 You know I never meant to let you down, let you down
                 Woulda gave you anything, woulda gave you everything
-                Oh-oh</p>
+                Oh-oh teścik</p>
             <p class="verse">
                 <h4 class="title-above-lyrics">[Verse 1]</h4>
                 I did not believe that it would end, no
