--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 Oh-oh teścik</p>
             <p class="verse">
                 <h4 class="title-above-lyrics">[Verse 1]</h4>
-                I did not believe that it would end, no
+                I did not believe that it would end, TEŚCIK no
                 Everything came second to the Benzo
                 You're not even speakin' to my friends, no
                 You knew all my uncles and my aunts though
