--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header-title">
         <h1>Post Malone Trap</h1>
-        <h2>"Better Now Testowanie Grida"</h2>
+        <h2>"Better Now"</h2>
     </header>
     <section class="lyrics">
         <div class="container">
@@ -29,7 +29,7 @@
                 Oh-oh teścik</p>
             <p class="verse">
                 <h4 class="title-above-lyrics">[Verse 1]</h4>
-                I did not believe that it would end, TEŚCIK no
+                I did not believe that it would end, no
                 Everything came second to the Benzo
                 You're not even speakin' to my friends, no
                 You knew all my uncles and my aunts though
