Add json gitignore htmlvalidate

--- a/index.html
+++ b/index.html
@@ -88,9 +88,7 @@
                 I only say that 'cause you're not around, not around
                 You know I never meant to let you down, let you down
                 Woulda gave you anything, woulda gave you everything
-                Oh-oh</p>
-            
-
+                Oh-oh Teścik synca</p>
 
         </div>
 
